--- a/html/index.css
+++ b/html/index.css
@@ -5,9 +5,6 @@
     margin: auto;
     /* overflow: hidden; */
 }
-body{
-    /* background-color: rgb(196, 196, 196); */
-}
 .market_icon img{
     border-radius: 50%;
     width: 100px;
@@ -15,4 +12,10 @@ body{
     max-height: 100px;
     border: 3px solid #00ffff;
     
+}
+
+.link-top {
+    width: 100%;
+    height: 1px;
+    border-top: solid #0091FF 1px;
 }
