--- a/html/index.css
+++ b/html/index.css
@@ -1,4 +1,7 @@
 .market_icon{
+    position: absolute;
+    right: 32%;
+    top: 47%;
     border-radius: 50%;
     width: 100px;
     height: auto;
@@ -7,7 +10,7 @@
 .market_icon img{
     border-radius: 50%;
     width: 100px;
-    height: auto;
+    height: 100px;
     max-height: 100px;
     border: 3px solid #00ffff;
     
