--- a/html/index.css
+++ b/html/index.css
@@ -1,4 +1,4 @@
-.market_icon{
+/* .market_icon{
     position: absolute;
     right: 32%;
     top: 47%;
@@ -14,7 +14,7 @@
     max-height: 100px;
     border: 3px solid #00ffff;
     
-}
+} */
 .link-top {
     width: 100%;
     height: 1px;
